<resources>
    <string name="app_name">QQ Stickers</string>
    <string name="button_download">Download</string>
    <string name="button_favorite">Favorite</string>
    <string name="button_open_link">Open link</string>
    <string name="indicator_emid">Emotion ID</string>
    <string name="title_favorites">My favorites</string>
    <string name="label_show_true">Visible</string>
    <string name="label_show_false">Hidden</string>
    <string name="label_fee_free">Free</string>
    <string name="label_fee_restricted">Restricted</string>
    <string name="button_delete">Delete</string>
    <string name="label_tag">Tag: %s</string>
    <string name="msg_error_fail">Cannot fetch information.</string>
    <string name="msg_exception">Exception:\n%s</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="indicator_emtitle">Title of this emotion set</string>
    <string name="label_real_size">%s (%d bytes)</string>
    <string name="button_unfavorite">Added to fav.</string>
    <string name="title_about">About</string>
    <string name="label_version">Version: %s\nRelease date: %s</string>
    <string name="label_author">Made by: lxfly2000</string>
    <string name="label_view_github_repo">Go to this app\'s GitHub Repository</string>
    <string name="msg_file_exists">File already exists:\n%s\n\nPlease delete this file before dowloading.</string>
    <string name="label_search_tip">Enter the emotion title...</string>
    <string name="menu_check_update">Check Update</string>
    <string name="message_new_version">Found new version, update?\nCurrent: %s\nNew: %s</string>
    <string name="button_skip_new_version">Skip this version</string>
    <string name="error_check_update">Cannot check update.</string>
    <string name="message_no_update">No update.</string>
    <string name="error_permission_network">No network permission.</string>
    <string name="check_navigate_only_favorite">Navigate only favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="label_preview_gif_main_view">Preview GIF on main screen</string>
    <string name="message_settings_saved">Settings saved.</string>
    <string name="key_link_to_open" translatable="false">using_preview_link</string>
    <string name="key_only_navigate_favorite" translatable="false">navigate_only_favorite</string>
    <string name="key_preview_gif_on_main_view" translatable="false">preview_gif_on_main_view</string>
    <string name="button_open_file">Open file</string>
</resources>
