<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                        android:id="@+id/imageEmotionIcon" android:contentDescription="@string/app_name"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/indicator_emtitle"
                        android:ems="10"
                        android:id="@+id/editTitle"/>
                <TextView
                        android:text="@string/label_real_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textRealSize"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/label_show_true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textIsShow"
                            android:layout_weight="1"/>
                    <TextView
                            android:text="@string/label_fee_free"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textFeeType"
                            android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/button_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/buttonDownload"
                    android:layout_weight="1"/>
            <ToggleButton
                    android:text="@string/button_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/toggleButton" android:layout_weight="1"
                    android:textOn="@string/button_unfavorite" android:textOff="@string/button_favorite"/>
            <Button
                    android:text="@string/button_open_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/buttonOpenLink"
                    android:layout_weight="1"/>
        </LinearLayout>
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textDescription"/>
        <TextView
                android:text="@string/label_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textTags"/>
        <GridView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/gridEmotions"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent">
        <Button
                android:text="@string/button_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonPrevious" android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editEmotionID" android:layout_weight="1" android:hint="@string/indicator_emid"/>
        <Button
                android:text="@string/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buttonNext" android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>