<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:padding="8dp">
            <TextView
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="24sp"/>
            <TextView
                    android:text="@string/label_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textVersionInfo"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3"/>
            <TextView
                    android:text="@string/label_view_github_repo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewGotoGithub"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5"/>
            <TextView
                    android:text="@string/label_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewMadeBy"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>